@@ -2098,9 +2098,9 @@ namespace {
 			}
 		}
 
-		if (m_settings.get_int(settings_pack::peer_tos) != 0)
+		if (m_settings.get_int(settings_pack::peer_dscp) != 0)
 		{
-			update_peer_tos();
+			update_peer_dscp();
 		}
 
 		ec.clear();
@@ -6324,22 +6324,22 @@ namespace {
 
 	// TODO: 2 this should be factored into the udp socket, so we only have the
 	// code once
-	void session_impl::update_peer_tos()
+	void session_impl::update_peer_dscp()
 	{
-		int const tos = m_settings.get_int(settings_pack::peer_tos);
+		int const value = m_settings.get_int(settings_pack::peer_dscp);
 		for (auto const& l : m_listen_sockets)
 		{
 			if (l->sock)
 			{
 				error_code ec;
-				set_traffic_class(*l->sock, tos, ec);
+				set_traffic_class(*l->sock, value, ec);
 
 #ifndef TORRENT_DISABLE_LOGGING
 				if (should_log())
 				{
-					session_log(">>> SET_TOS [ tcp (%s %d) tos: %x e: %s ]"
+					session_log(">>> SET_DSCP [ tcp (%s %d) value: %x e: %s ]"
 						, l->sock->local_endpoint().address().to_string().c_str()
-						, l->sock->local_endpoint().port(), tos, ec.message().c_str());
+						, l->sock->local_endpoint().port(), value, ec.message().c_str());
 				}
 #endif
 			}
@@ -6347,15 +6347,15 @@ namespace {
 			if (l->udp_sock)
 			{
 				error_code ec;
-				set_traffic_class(l->udp_sock->sock, tos, ec);
+				set_traffic_class(l->udp_sock->sock, value, ec);
 
 #ifndef TORRENT_DISABLE_LOGGING
 				if (should_log())
 				{
-					session_log(">>> SET_TOS [ udp (%s %d) tos: %x e: %s ]"
+					session_log(">>> SET_DSCP [ udp (%s %d) value: %x e: %s ]"
 						, l->udp_sock->sock.local_endpoint().address().to_string().c_str()
 						, l->udp_sock->sock.local_port()
-						, tos, ec.message().c_str());
+						, value, ec.message().c_str());
 				}
 #endif
 			}
